채팅방 css 수정완료.

--- a/src/main/resources/static/css/message_list.css
+++ b/src/main/resources/static/css/message_list.css
@@ -19,10 +19,11 @@ img{ max-width:100%;}
   width: 35%; border-right:1px solid #f7f7f7;
 }
 .inbox_msg {
-  border: 1px solid #f7f7f7;
+  border: 1px solid gold;
   border-radius: 15px;
   clear: both;
   overflow: hidden;
+  background-color: white;
 }
 .top_spac{ margin: 20px 0 0;}
 
@@ -68,7 +69,7 @@ img{ max-width:100%;}
 .chat_list {
   border-bottom: 1px solid #f7f7f7;
   margin: 0;
-  padding: 18px 16px 10px;
+  padding: 18px 16px 10px;  
 }
 
 
@@ -76,7 +77,7 @@ img{ max-width:100%;}
 	background-color: #d6ead0;
 }
 
-.inbox_chat { height: 625px; overflow-y: scroll;}
+.inbox_chat { height: 680px; overflow-y: scroll;}
 
 .active_chat{ background:#ebebeb;}
 
@@ -109,8 +110,10 @@ img{ max-width:100%;}
 .received_withd_msg { width: 50%;}
 .mesgs {
   float: left;
-  padding: 30px 15px 0 25px;
-  width: 60%;
+  padding: 10px 10px 10px 10px;
+  background-color: white; 
+  width: 740px;
+  height: 740px;
 }
 
  .sent_msg p {
@@ -147,9 +150,14 @@ img{ max-width:100%;}
   font-size: 17px;
   height: 33px;
   position: absolute;
-  right: 0;
-  top: 11px;
+  right: 15px;
+  top: 5px;
   width: 33px;
+}
+
+.mmgs{
+	width: 750px;
+	height: 100px;
 }
 
 .msg_send_btn:hover{
@@ -158,6 +166,7 @@ img{ max-width:100%;}
 
 .messaging { padding: 0 0 50px 0;}
 .msg_history {
-  height: 516px;
+  height: 560px;
+  width: 750px;
   overflow-y: auto;
 }
