--- a/src/main/resources/static/css/message_list.css
+++ b/src/main/resources/static/css/message_list.css
@@ -37,7 +37,7 @@ img{ max-width:100%;}
 .headind_srch{ padding:10px 29px 10px 20px; overflow:hidden; border-bottom:1px solid #f7f7f7;}
 
 .recent_heading h4 {
-  color: #5fcf80;
+  color: #CC9966;
   font-size: 30px;
   margin: auto;
   font-family: 'Nanum Pen Script', cursive;
@@ -117,7 +117,7 @@ img{ max-width:100%;}
 }
 
  .sent_msg p {
-  background: #97df93 none repeat scroll 0 0;
+  background: #CC9966 none repeat scroll 0 0;
   border-radius: 7px;
   font-size: 14px;
   margin: 0; color:#fff;
@@ -142,7 +142,7 @@ img{ max-width:100%;}
 
 .type_msg {border-top: 1px solid #dfdfdf;position: relative;}
 .msg_send_btn {
-  background: #97df93 none repeat scroll 0 0;
+  background: #CC9966 none repeat scroll 0 0;
   border: medium none;
   border-radius: 50%;
   color: #fff;
