--- a/src/main/resources/static/css/message_list.css
+++ b/src/main/resources/static/css/message_list.css
@@ -120,7 +120,8 @@ img{ max-width:100%;}
   background: #CC9966 none repeat scroll 0 0;
   border-radius: 7px;
   font-size: 14px;
-  margin: 0; color:#fff;
+  margin: 0; 
+  color:#fff;
   padding: 10px 10px 10px 12px;
   width:auto;
   font-family: 'Noto Sans KR', sans-serif;
